--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+asgiref = "==3.8.1"
+django = "==5.0.6"
+django-environ = "==0.11.2"
+psycopg2 = "==2.9.9"
+sqlparse = "==0.5.0"
+typing-extensions = "==4.11.0"
+whitenoise = "==6.6.0"
 
 [dev-packages]
 
