--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,41 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-asgiref = "==3.8.1"
-django = "==5.0.6"
-django-environ = "==0.11.2"
-psycopg2 = "==2.9.9"
-sqlparse = "==0.5.0"
-typing-extensions = "==4.11.0"
-whitenoise = "==6.6.0"
+django = "*"
+django-environ = "*"
+djangorestframework = "*"
+django-crispy-forms = "*"
+user-agents = "*"
+mailgun = "*"
+gunicorn = "*"
+whitenoise = "*"
+structlog = "*"
+boto3 = "*"
+django-storages = "*"
+sentry-sdk = "*"
+requests = "*"
+celery = "*"
+method-python = "*"
+twilio = "*"
+psycopg2-binary = "*"
+redis = "*"
+numpy = "*"
+logtail-python = "*"
+django-ipware = "*"
+sendgrid = "*"
+plaid-python = "~=13.0"
+django-allauth = "*"
+pandas = "*"
+statsmodels = "*"
+dateutils = "*"
+newrelic = "*"
+ipinfo = "*"
+cryptography = "*"
 
 [dev-packages]
+black = "*"
+factory-boy = "*"
+faker = "*"
 
 [requires]
-python_version = "3.12"
+python_version = "3.8"
