--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+django-cors-headers
 cryptography==42.0.7
 dateutils==0.6.12
 Django==5.0.6
